changed navbar to not have dropdown bar on current trainer name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,16 +29,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <% if current_user %>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <li class="nav-item">
+              <a class="nav-link disabled">
                 <%= Trainer.find_by(id: current_user.current_trainer_id).title %> <%= Trainer.find_by(id: current_user.current_trainer_id).name %>
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
             </li>
           <% else %>  
             <li class="nav-item">
