added pokemon moveset onto pokemons show.html.erb

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -72,6 +72,8 @@
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].spe.to_i%>>
                     </div>
                 </div> 
+
+                <%= link_to "Go to page", @pokemons[index] %>
                 <p class="card=text"></p>
               </div>
             </div>
