--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1> Hello pokemon </h1>
+<h1> <%= @pokemon.name %> </h1>
 <% index = 0 %>
 <ul>
     <div class="col-sm-4">
@@ -72,4 +72,31 @@
       </div>
     </div>
 </ul>
+
+  <% index = 0 %>
+  <% @pokemon_movesets = Moveset.where(pokemon_name: "#{@pokemon.name}") %>
+  <ul>
+        <div> hello <%= @pokemon_movesets.length %></div>
+    <% while index < @pokemon_movesets.length %>
+
+      <% @pokemon_moveset = @pokemon_movesets.find_by(id: index+1)%>
+      <% @pokemon_move = Move.find_by(name: @pokemon_moveset.move_name) %>
+
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><%= @pokemon_moveset.move_name%></h5>
+          <p class="card=text"><b> Acquired (lvl): </b> <%= @pokemon_moveset.level_acquire%> <b>Type:</b> <%= @pokemon_move.move_type%> <b>Category:</b> <%= @pokemon_move.category%> </p> 
+          <p class="card=text"><b> PP: </b> <%= @pokemon_move.pp%> <b>Power:</b> <%= @pokemon_move.power%> <b>Accuracy:</b> <%= @pokemon_move.accuracy%> </p> 
+          <p><b>Effect Percent:</b> <%= @pokemon_move.effect_percent%></p>
+          <div><%= @pokemon_move.description%></div>
+          <p class="card=text"></p>
+        </div>
+      </div>
+    <% index += 1 %>
+    <% end %>
+        
+  
+
+
+  </ul>
 </body>
